# openmetrics-module

./: .gitignore  CMakeLists.txt  README.md  flake.nix  metadata.json
.github/workflows/: ci.yml  doctests.yml
doctests/: .gitignore  openmetrics.test.yaml  run.sh
doctests/outputs/: openmetrics.md
example-metrics-source/: CMakeLists.txt  metadata.json
example-metrics-source-2/: CMakeLists.txt  metadata.json
example-metrics-source-2/src/: metrics_demo_2_impl.cpp  metrics_demo_2_impl.h
example-metrics-source/rust-lib/: Cargo.toml
example-metrics-source/rust-lib/include/: metrics_demo.h
example-metrics-source/rust-lib/src/: lib.rs
example-metrics-source/src/: metrics_demo_impl.cpp  metrics_demo_impl.h
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
openmetrics/: metadata.json
openmetrics/interfaces/: metrics_source.h
openmetrics/src/: openmetrics_format.cpp  openmetrics_format.h  openmetrics_impl.h
pr-2/: index.html
pr-2/macos-latest/: index.html
pr-2/ubuntu-latest/: index.html
pr-3/: index.html
pr-3/macos-latest/: index.html
pr-3/ubuntu-latest/: index.html
rust-lib/: Cargo.toml
rust-lib/include/: prometheus_metrics.h
rust-lib/src/: collector.rs  formatter.rs  lib.rs  server.rs  state.rs
src/: openmetrics_impl.cpp
